# llm2025compet

./: .gitignore  Dockerfile  Makefile  README.md  annotated.csv  copy_HF.sh  copy_model.sh  hostfile  pyproject.toml  requirements-think-offline.txt  requirements.txt  run_lora.sh  training_config.json
data/dna/: .gitignore  DNA_vanilla_benign.py  README.md  README_P02.md  README_think_tags.md  add_think_tags.py  add_think_tags_offline.py  classify_script.py  dna_dpo_v2_generator.py  env.example  gen_dpo_node.py  hh-rlhf_for_dpo.py  requirements.txt  run_dpo_generation.sh  run_dpo_interactive.sh  run_dpo_slurm.sh  upload_to_hf.py  wildjailbreak_vanilla_benign.py
evaluation/: README.md  main.py
evaluation/dna/: README.md  eval.py  infer.py  inference.py  start_vllm.sh
evaluation/eval_dna/: README.md
evaluation/hle/: README.md  eval.py  infer.py
inference/: README.md  client_example.py  utils.py  vllm_run_fullnode.sh  vllm_sbatch.sh  vllm_start.sh
logs/: 325467.err  325467.out  325488.err  325488.out  325489.err  325489.out  325555.err  325555.out  325966.err  325966.out  328550.err  328550.out  err_lines.txt  lora-r1-279251.err  lora-r1-279251.out  lora-r1-279270.err  lora-r1-279270.out  lora-r1-280021.err  lora-r1-280021.out  lora-r1-280156.err  lora-r1-280156.out  lora-r1-280187.err  lora-r1-280187.out  lora-r1-280209.err  lora-r1-280209.out  lora-r1-282845.err  lora-r1-282845.out  lora-r1-282858.err  lora-r1-282858.out  lora-r1-282913.err  lora-r1-282913.out  lora-r1-282931.err  lora-r1-282931.out  lora-r1-283066.err  lora-r1-283066.out  lora-r1-283072.err  lora-r1-283072.out  lora-r1-283074.err  lora-r1-283074.out  lora-r1-285350.err  (+254 more)
logs_hayatohongo_Qwen3SFT_20250817/: sft-235b_maxlen1024370360.err  sft-235b_maxlen1024370360.out  sft-235b_maxlen2048370462.err  sft-235b_maxlen2048370462.out  sft-235b_maxlen256370250.err  sft-235b_maxlen256370250.out  sft-235b_maxlen4096370433.err  sft-235b_maxlen4096370433.out  sft-30b_370027.err  sft-30b_370027.out  sft-30b_370167.err  sft-30b_370167.out  sft-30b_370195_maxlen512.err  sft-30b_370195_maxlen512.out  sft-30b_370196_maxlen256.err  sft-30b_370196_maxlen256.out  sft-30b_370197_maxlen1024.err  sft-30b_370197_maxlen1024.out
scripts/: create_dataset_v2.py  run_add_think_tags_offline.sbatch  utils.py
training/: README.md  create_ms-swift_env.sh  create_open-r1_env.sh  create_open-r1_env2.sh  start_train.sh
tutorials/: job_single_node.sh  run_inference.py
wandb/: latest-run
(+555 files in other folders)
