[project]
name = "llm2025compet"
version = "0.1.0"
description = "Matsuo-Lab LLM 2025 Competition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "datasets>=4.0.0",
  "huggingface-hub[cli]>=0.33.4",
  "jupyter>=1.1.1",
  "numpy>=2.2",
  "openai>=1.90.0",
  "pandas>=2.3.1",
  "pydantic>=2.11.7",
  "torch>=2.7.0",
  "vllm==0.9.2",
  "wandb>=0.21.0",
]

[project.optional-dependencies]
learn = [
  "trl[vllm]>=0.19.1",
  "deepspeed>=0.16.8",
  "accelerate>=1.4.0",
  "peft>=0.14.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux' or platform_machine == 'aarch64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
