[project]
name = "llm2025compet"
version = "0.1.0"
description = "Matsuo-Lab LLM 2025 Competition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "datasets>=4.0.0",
  "huggingface-hub[cli]>=0.33.4",
  "jupyter>=1.1.1",
  "numpy>=2.2",
  "openai>=1.90.0",
  "pandas>=2.3.1",
  "pydantic>=2.11.7",
  "torch>=2.7.0",
  "trl>=0.19.1",
  # "vllm==0.9.2",  # DPO生成では不要のため一時的にコメントアウト
  "wandb>=0.21.0",
  # DPO生成用の依存関係
  "transformers>=4.35.0",
  "accelerate>=0.24.0",
  "bitsandbytes>=0.41.0",
  "tqdm>=4.64.0",
  "python-dotenv>=1.0.0",
  "datasets>=2.0.0",
]

# [tool.uv]
# extra-index-url = ["https://download.pytorch.org/whl/cu128"]
